--- a/BibliotecasEmDotNet/bytebank_ATENDIMENTO/bytebank_ATENDIMENTO.csproj
+++ b/BibliotecasEmDotNet/bytebank_ATENDIMENTO/bytebank_ATENDIMENTO.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\bytebank_Modelos\bytebank_Modelos.csproj" />
   </ItemGroup>
 
