--- a/CursoDotNetMongoDb/exemplosMongoDB/exemplosMongoDB/exemplosMongoDB.csproj
+++ b/CursoDotNetMongoDb/exemplosMongoDB/exemplosMongoDB/exemplosMongoDB.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="mongocsharpdriver" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
+
 </Project>
